# pyqwest

./: .gitignore  Cargo.toml  README.md  poe_tasks.toml  pyproject.toml  pyqwest.code-workspace  renovate.json  zensical.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  codeql.yml  docs.yaml  release.yaml
docs/: api.md  index.md  usage.md
docs/reference/: adapters.md  async.md  clients.md  common.md  headers.md  httpx.md  index.md  requests.md  responses.md  sync.md  testing.md  transports.md
pyqwest/: __init__.py  _coro.py  _errors.py  _glue.py  _multipart.py  _pyqwest.pyi  pyqwest.pyi
pyqwest/httpx/: __init__.py  _transport.py
pyqwest/middleware/: retry.py
pyqwest/middleware/logging/: __init__.py  _async.py  _sync.py
pyqwest/middleware/retry/: __init__.py  _async.py  _shared.py  _sync.py
pyqwest/testing/: __init__.py  _asgi.py  _wsgi.py
src/: body.rs  client.rs  common.rs  headers.rs  lib.rs  pyerrors.rs  request.rs  response.rs
src/asyncio/: awaitable.rs  client.rs  mod.rs  request.rs  response.rs  stream.rs  transport.rs
src/common/: httpversion.rs  mod.rs  multipart.rs  proxy.rs
src/shared/: backoff.rs  buffer.rs  constants.rs  mod.rs  otel.rs  pyerrors.rs  request.rs  response.rs  shutdown.rs  transport.rs
src/sync/: client.rs  request.rs  response.rs  timeout.rs  transport.rs
tests/: _util.py  conftest.py  test_benchmark.py  test_client.py  test_common.py  test_errors.py  test_headers.py  test_httpx.py  test_middleware.py  test_multipart.py  test_multipart_encode.py  test_otel.py  test_otel_runtime_metrics.py  test_proxy.py  test_request.py  test_response.py  test_retries.py  test_timeout.py  test_tls.py  test_tls_system.py  test_transport.py  test_wsgi.py
tests/apps/asgi/: kitchensink.py
tests/apps/wsgi/: kitchensink.py
tests/middleware/logging/: test_async.py  test_sync.py
tests/middleware/retry/: test_async.py  test_sync.py
