[package]
name = "pyqwest"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "pyqwest"

[dependencies]
arc-swap = "1.9.1"
backoff = "0.4.0"
brotli = "8.0.4"
bytes = "1.11.1"
errors = "0.1.0"
futures-core = "0.3.32"
h2 = "0.4.14"
h3 = "0.0.8"
http = "1.4.2"
http-body = "1.0.1"
http-body-util = "0.1.3"
mime = "0.3.17"
pyo3 = { version = "0.29.0", features = ["bytes"] }
pyo3-async-runtimes = {
  version = "0.29.0",
  features = [
    "tokio-runtime",
    "unstable-streams",
  ]
}
reqwest = {
  version = "0.13.4",
  features = [
    "brotli",
    "cookies",
    "gzip",
    "hickory-dns",
    "http2",
    "http3",
    "stream",
    "zstd",
  ]
}
tokio = "1.52.3"
tokio-stream = "0.1.18"
url = "2.5.8"
zstd = "0.13.3"

[build-dependencies]
pyo3-build-config = { version = "0.29.0", features = ["resolve-config"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
unused_trait_names = "deny"
